fix: font size, alignment, text on slide to right and blogs page changes

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@
     justify-content:space-between;
     flex-wrap: wrap;
   }
-  .service-card, .about-us-cards {
+  .service-card, .about-us-cards, .blogs-cards {
     width: 225px;
     padding: 10px;
   }
@@ -135,13 +135,13 @@
     height: 225px;
     background-color: #cbc7c7;
   }
-  .about-us-cards {
+  .about-us-cards, .blogs-cards {
     height: 200px;
     background-color: black;
     opacity: 0.8;
     color: white;
   }
-  .about-us-cards:hover {
+  .about-us-cards:hover, .blogs-cards:hover {
     background-color: #FF5823;
     opacity: 1;
   }
@@ -366,6 +366,7 @@
     align-items: center;
     margin: auto;
     max-width: 1150px;
+    gap: 25px;
   }
 
   #our-services-content{
@@ -575,6 +576,11 @@
     height: 650px;
   }
 
+  .sub-menus-ul {
+    padding: revert;
+  }
+
+
   /* table css */
   table {
     border-collapse: collapse;
@@ -653,7 +659,7 @@
   #side-panel a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 18px;
     color: white;
     display: block;
     transition: 0.3s;
@@ -723,6 +729,13 @@
     .slideImg {
       height: 550px;
     }
+    .day-night-text {
+      font-size: 22px;
+      right: 16px;
+    }
+    #logo-on-slides {
+      height: 70px
+    }
   }
   @media (max-width:768px){
     #menus{
@@ -741,6 +754,20 @@
     }
     .slideImg {
       height: 450px;
+    }
+    .header-font-size{
+      font-size: 11px;
+    }
+    .blogs-cards {
+      height: 155px;
+      width: 175px;
+    }
+    .day-night-text {
+      font-size: 20px;
+      right: 15px;
+    }
+    #logo-on-slides {
+      height: 70px
     }
   }
   @media (max-width: 575px){
@@ -804,6 +831,10 @@
     .about-us-cards {
       height: 175px;
     }
+    .blogs-cards {
+      height: 125px;
+      width: 175px;
+    }
   }
   @media (max-width: 460px){
     #menus{
@@ -827,7 +858,7 @@
       padding: 20px;
     }
     .header-font-size{
-      font-size: 16px;
+      font-size: 12px;
     }
     .get-in-touch {
       flex-direction: column;
@@ -849,6 +880,16 @@
     }
     .about-us-cards {
       height: 175px;
+    }
+    .day-night-text {
+      font-size: 15px;
+      right: 10px;
+    }
+    #logo-on-slides {
+      height: 50px
+    }
+    .sub-menus-ul {
+      padding: 0px;
     }
   }
   @media (max-width: 290px){
@@ -876,7 +917,7 @@
       padding: 20px;
     }
     .header-font-size{
-      font-size: 16px;
+      font-size: 11px;
     }
     .get-in-touch {
       flex-direction: column;
@@ -891,11 +932,11 @@
       width: 100%
     }
     .day-night-text {
-      font-size: 20px;
-      right: 30px;
+      font-size: 10px;
+      right: 5px;
     }
     #logo-on-slides {
-      height: 70px
+      height: 30px
     }
   }
   
